Fix compatibility with modern JVMs