@@ -4,6 +4,7 @@
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   :main clooj.core
+  :jvm-opts ["--add-exports" "java.desktop/com.apple.eawt=ALL-UNNAMED"]
   :dependencies [[org.clojure/clojure "1.11.1"]
                  [clj-inspector "0.0.16"]
                  [slamhound "1.5.5"]
